# serial-com

./: .gitignore  CMakeLists.txt  README.md  interface overview.md  main.c  serial-com.cpp
serial-com/: CMakeLists.txt  serial-com-linux.cpp  serial-com-linux.h  serial-com-windows.cpp  serial-com-windows.h  serial-com.cpp  serial-com.h
